--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -51,26 +51,32 @@ nav ul {
 }
 .task-block{
     height: 150px;
-    border: 1px solid #ccc;
+    background: #E2E4E6;
+    border-radius: 3px;
+    box-sizing: border-box;
     padding: 20px;
-    background-color:aqua;
     overflow: scroll;
-    color : red;
     margin-bottom: 20px;
 }
 .tasktitle-section , .card-detail-section{
 margin: 0 0 10px 0;
 padding: 5px;
-border: 1px solid grey;
 margin-bottom: 10px;
 font-weight: 200px;
 }
 .card-detail-section{
-color: black;
+      background-color: #fff;
+      border-bottom: 1px solid #ccc;
+      border-radius: 3px;
 }
-.quick-card-editor-buttons.fade-in {
+.quick-card-editor-buttons {
     margin-bottom: 10px;
     margin-left: 4px;
+    margin-top: 10px;
+}
+.quick-card-editor-buttons a.btn-link{
+  width: 22%;
+  display: inline-block;
 }
 .card-detail-section span{
 
@@ -96,9 +102,36 @@ color: black;
 .input-section{
   margin: 0 0 10px 0;
 }
+.input-section {
+	position: absolute;
+	background: #88b7d5;
+	border: 4px solid #c2e1f5;
+  width: 250px;
+}
+.input-section:after, .input-section:before {
+	bottom: 100%;
+	left: 22%;
+	border: solid transparent;
+	content: " ";
+	height: 0;
+	width: 0;
+	position: absolute;
+	pointer-events: none;
+}
 
+.input-section:after {
+	border-color: rgba(136, 183, 213, 0);
+	border-bottom-color: #88b7d5;
+	border-width: 30px;
+	margin-left: -30px;
+}
+.input-section:before {
+	border-color: rgba(194, 225, 245, 0);
+	border-bottom-color: #c2e1f5;
+	border-width: 36px;
+	margin-left: -36px;
+}
 
 span.quick-card-editor-buttons-item-text {
-    border-right: 1px solid darkred;
-    padding-right: 10px;
+      padding : 10px;
 }
