--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -95,7 +95,7 @@ font-weight: 200px;
 
 }
 .card-detail-section span.card-tag {
-  background: magenta;
+  background: #F2D600;
   border-radius: 6px;
   margin-right: 20px;
 }
